uncommented line24 in server.js

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,13 +16,14 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/albums.css">
 </head>
 <body>
     {{!-- Handlebars body --}}
     {{{body}}}
     
     {{!-- Button for scraping more data --}}
-    <button id='scrape-button'>Scrape   </button>
+    <button id='scrape-button'>Scrape</button>
 
     {{!-- Modal --}}
     <div id="myModal" class="modal">
